application: Split demo resources into their own bundle
No need to add these to the library

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -43,6 +43,11 @@ endif
 
 if get_option('examples')
 
+gnome.compile_resources('demo',
+  'demo.gresource.xml',
+  gresource_bundle: true,
+)
+
 cargo_demo_build = custom_target(
   'cargo-build-demo',
   build_by_default: true,
