build: Prepare for GSettings
Add run script and ensure we always compile the schema

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -31,15 +31,18 @@ appstreamcli = find_program('appstreamcli', required: false, disabler: true)
 test('Validate appstream file', appstreamcli,
      args: ['validate', '--no-net', '--explain', appstream_file])
 
-if get_option('examples')
-  install_data('mobi.phosh.FileSelector.gschema.xml',
-    install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
+install_data('mobi.phosh.FileSelector.gschema.xml',
+  install_dir: get_option('datadir') / 'glib-2.0' / 'schemas'
+)
+
+compile_schemas = find_program('glib-compile-schemas', required: false)
+if compile_schemas.found()
+  test('Validate schema file', compile_schemas,
+    args: ['--strict', '--dry-run', meson.current_source_dir()]
   )
 endif
-
-compile_schemas = find_program('glib-compile-schemas', required: false, disabler: true)
-test('Validate schema file',
-     compile_schemas,
-     args: ['--strict', '--dry-run', meson.current_source_dir()])
+compiled = gnome.compile_schemas(
+  build_by_default: true
+)
 
 subdir('icons')
