--- a/meson.build
+++ b/meson.build
@@ -18,8 +18,15 @@ subdir('data')
 subdir('src')
 subdir('po')
 
+run_data = configuration_data()
+run_data.set('ABS_BUILDDIR', meson.current_build_dir())
+configure_file(
+  input: 'run.in',
+  output: 'run',
+  configuration: run_data)
+
 gnome.post_install(
-     glib_compile_schemas: get_option('examples'),
+     glib_compile_schemas: true,
     gtk_update_icon_cache: get_option('examples'),
   update_desktop_database: get_option('examples'),
 )
