build: Format meson files
  meson format -e -r -i

Signed-off-by: Guido Günther <agx@sigxcpu.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,7 @@
 pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
 gnome = import('gnome')
 
-gnome.compile_resources('pfs',
-  'pfs.gresource.xml',
-  gresource_bundle: true,
-  install_dir: pkgdatadir,
-)
+gnome.compile_resources('pfs', 'pfs.gresource.xml', gresource_bundle: true, install_dir: pkgdatadir)
 
 conf = configuration_data()
 conf.set_quoted('VERSION', meson.project_version())
@@ -14,28 +10,24 @@ conf.set_quoted('LOG_DOMAIN', 'pfs')
 conf.set_quoted('LOCALEDIR', get_option('prefix') / get_option('localedir'))
 conf.set_quoted('PKGDATADIR', pkgdatadir)
 
-configure_file(
-    input: 'config.rs.in',
-    output: 'config.rs',
-    configuration: conf
-)
+configure_file(input: 'config.rs.in', output: 'config.rs', configuration: conf)
 
 # Copy the config.rs output to the source directory.
 run_command(
   'cp',
   meson.project_build_root() / 'src' / 'config.rs',
   meson.project_source_root() / 'src' / 'config.rs',
-  check: true
+  check: true,
 )
 
-cargo_bin  = find_program('cargo')
-cargo_opt  = [ '--manifest-path', meson.project_source_root() / 'Cargo.toml' ]
-cargo_opt += [ '--target-dir', meson.project_build_root()  / 'src' ]
-cargo_env  = [ 'CARGO_HOME=' + meson.project_build_root()  / 'cargo-home' ]
-cargo_env += [ 'PFS_RESOURCE_DIR=' + meson.current_build_dir() ]
+cargo_bin = find_program('cargo')
+cargo_opt = ['--manifest-path', meson.project_source_root() / 'Cargo.toml']
+cargo_opt += ['--target-dir', meson.project_build_root() / 'src']
+cargo_env = ['CARGO_HOME=' + meson.project_build_root() / 'cargo-home']
+cargo_env += ['PFS_RESOURCE_DIR=' + meson.current_build_dir()]
 
 if get_option('buildtype') == 'release'
-  cargo_opt += [ '--release' ]
+  cargo_opt += ['--release']
   rust_target = 'release'
 else
   rust_target = 'debug'
@@ -43,25 +35,28 @@ endif
 
 if get_option('examples')
 
-gnome.compile_resources('demo',
-  'demo.gresource.xml',
-  gresource_bundle: true,
-)
+  gnome.compile_resources('demo', 'demo.gresource.xml', gresource_bundle: true)
 
-cargo_demo_build = custom_target(
-  'cargo-build-demo',
-  build_by_default: true,
-  build_always_stale: true,
-  output: 'pfs-demo',
-  console: true,
-  install: true,
-  install_dir: get_option('bindir'),
-  command: [
-    'env', cargo_env,
-    cargo_bin, 'build', cargo_opt,
-    '&&', 'cp', meson.project_build_root() / 'src' / rust_target / 'pfs-demo', '@OUTPUT@',
-  ]
-)
+  cargo_demo_build = custom_target(
+    'cargo-build-demo',
+    build_by_default: true,
+    build_always_stale: true,
+    output: 'pfs-demo',
+    console: true,
+    install: true,
+    install_dir: get_option('bindir'),
+    command: [
+      'env',
+      cargo_env,
+      cargo_bin,
+      'build',
+      cargo_opt,
+      '&&',
+      'cp',
+      meson.project_build_root() / 'src' / rust_target / 'pfs-demo',
+      '@OUTPUT@',
+    ],
+  )
 
 endif
 
@@ -75,48 +70,66 @@ cargo_static_lib_build = custom_target(
   output: 'libpfs.a',
   console: true,
   command: [
-    'env', cargo_env,
-    cargo_bin, 'build', '--lib', cargo_opt,
-    '&&', 'cp', meson.project_build_root() / 'src' / rust_target / 'libpfs.a', '@OUTPUT@',
-  ]
+    'env',
+    cargo_env,
+    cargo_bin,
+    'build',
+    '--lib',
+    cargo_opt,
+    '&&',
+    'cp',
+    meson.project_build_root() / 'src' / rust_target / 'libpfs.a',
+    '@OUTPUT@',
+  ],
 )
 
 if get_option('shared-lib')
 
-install_headers(
-  'include' / 'pfs.h',
-  subdir : 'pfs-0',
-)
+  install_headers('include' / 'pfs.h', subdir: 'pfs-0')
 
-# This is the same build as above but we install the lib this time and
-# patch the soname: https://github.com/rust-lang/cargo/issues/5045
-patchelf_bin  = find_program('patchelf')
-cargo_lib_build = custom_target(
-  'cargo-build-lib',
-  build_by_default: true,
-  build_always_stale: true,
-  output: 'libpfs-0.so',
-  console: true,
-  install: true,
-  install_dir: get_option('libdir'),
-  command: [
-    'env', cargo_env,
-    cargo_bin, 'build', '--lib', cargo_opt,
-    '&&', 'cp', meson.project_build_root() / 'src' / rust_target / 'libpfs.so', meson.current_build_dir(),
-    '&&', 'cp', meson.project_build_root() / 'src' / 'libpfs.so', '@OUTPUT@',
-    '&&', patchelf_bin, '--set-soname', 'libpfs-0.so', '@OUTPUT@',
-  ]
-)
+  # This is the same build as above but we install the lib this time and
+  # patch the soname: https://github.com/rust-lang/cargo/issues/5045
+  patchelf_bin = find_program('patchelf')
+  cargo_lib_build = custom_target(
+    'cargo-build-lib',
+    build_by_default: true,
+    build_always_stale: true,
+    output: 'libpfs-0.so',
+    console: true,
+    install: true,
+    install_dir: get_option('libdir'),
+    command: [
+      'env',
+      cargo_env,
+      cargo_bin,
+      'build',
+      '--lib',
+      cargo_opt,
+      '&&',
+      'cp',
+      meson.project_build_root() / 'src' / rust_target / 'libpfs.so',
+      meson.current_build_dir(),
+      '&&',
+      'cp',
+      meson.project_build_root() / 'src' / 'libpfs.so',
+      '@OUTPUT@',
+      '&&',
+      patchelf_bin,
+      '--set-soname',
+      'libpfs-0.so',
+      '@OUTPUT@',
+    ],
+  )
 
-pkg = pkgconfig.generate(
-  name: 'pfs',
-  filebase: 'libpfs-0',
-  version : meson.project_version(),
-  subdirs: 'pfs-0',
-  description: 'Phosh File Selector',
-  libraries: '-lpfs-0',
-  requires_private: libpfs_deps,
-)
+  pkg = pkgconfig.generate(
+    name: 'pfs',
+    filebase: 'libpfs-0',
+    version: meson.project_version(),
+    subdirs: 'pfs-0',
+    description: 'Phosh File Selector',
+    libraries: '-lpfs-0',
+    requires_private: libpfs_deps,
+  )
 
 endif
 
