--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,9 @@ include:
  - project: 'guidog/meta-phosh'
    ref: '3629f479a3b1d37077137f05f988028c6e712378'
    file: '/ci/phosh-common-jobs.yml'
- - remote: 'https://gitlab.gnome.org/Infrastructure/Mirrors/lorry-mirrors/gitlab_freedesktop_org/freedesktop/ci-templates/-/raw/d03cddbcff35f26861429fc816c00323f48e99af/templates/ci-fairy.yml'
+ - project: 'Infrastructure/freedesktop-ci-templates'
+   ref: 'd03cddbcff35f26861429fc816c00323f48e99af'
+   file: '/templates/ci-fairy.yml'
 
 stages:
  - build
